{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 185,
  "lineage": "18634d4e-dcc7-eb9d-8f40-405e9471a7ce",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "mongodb_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027bebca86396fdfd",
            "arn": "arn:aws:ec2:us-east-1:306970076789:elastic-ip/eipalloc-027bebca86396fdfd",
            "association_id": "eipassoc-0eff0c2b765059ed1",
            "domain": "vpc",
            "id": "eipalloc-027bebca86396fdfd",
            "instance": "i-09cb2362273c42145",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f56c7f00d74f7162",
            "private_dns": "ip-172-31-93-176.ec2.internal",
            "private_ip": "172.31.93.176",
            "public_dns": "ec2-52-21-244-252.compute-1.amazonaws.com",
            "public_ip": "52.21.244.252",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "mongodb-static-ip"
            },
            "tags_all": {
              "Name": "mongodb-static-ip"
            }
          },
          "dependencies": [
            "aws_instance.mongodb",
            "aws_security_group.movies_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "rabbitmq_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b045179bc8c0ad08",
            "arn": "arn:aws:ec2:us-east-1:306970076789:elastic-ip/eipalloc-0b045179bc8c0ad08",
            "association_id": "eipassoc-07fa1f34562c55550",
            "domain": "vpc",
            "id": "eipalloc-0b045179bc8c0ad08",
            "instance": "i-00488a6ce297fcc08",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0198a8816133e36f3",
            "private_dns": "ip-172-31-81-235.ec2.internal",
            "private_ip": "172.31.81.235",
            "public_dns": "ec2-35-171-120-255.compute-1.amazonaws.com",
            "public_ip": "35.171.120.255",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "rabbitmq-static-ip"
            },
            "tags_all": {
              "Name": "rabbitmq-static-ip"
            }
          },
          "dependencies": [
            "aws_instance.rabbitmq",
            "aws_security_group.movies_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "api1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-09757e8c9b2ba5eef",
            "arn": "arn:aws:ec2:us-east-1:306970076789:instance/i-02ce19a3054784373",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-02ce19a3054784373",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0631f722a2f34ff4c"
              }
            ],
            "primary_network_interface_id": "eni-0631f722a2f34ff4c",
            "private_dns": "ip-172-31-90-222.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.90.222",
            "public_dns": "ec2-18-204-206-181.compute-1.amazonaws.com",
            "public_ip": "18.204.206.181",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-055360c4ee52fcc61",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "movies_app_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08bd386534d9c3c18",
            "tags": {
              "Name": "movies-api-1",
              "Rule": "BackendAPI"
            },
            "tags_all": {
              "Name": "movies-api-1",
              "Rule": "BackendAPI"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04594d65ab665cc03"
            ]
          },
          "dependencies": [
            "aws_eip.mongodb_eip",
            "aws_eip.rabbitmq_eip",
            "aws_instance.mongodb",
            "aws_instance.rabbitmq",
            "aws_security_group.movies_sg",
            "aws_ssm_parameter.mongo_ip",
            "aws_ssm_parameter.rabbitmq_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "api2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-09757e8c9b2ba5eef",
            "arn": "arn:aws:ec2:us-east-1:306970076789:instance/i-0b987b24b731dca06",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-0b987b24b731dca06",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0cc611d9fe35ffed0"
              }
            ],
            "primary_network_interface_id": "eni-0cc611d9fe35ffed0",
            "private_dns": "ip-172-31-87-185.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.87.185",
            "public_dns": "ec2-52-23-168-112.compute-1.amazonaws.com",
            "public_ip": "52.23.168.112",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0168b9799425a9808",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "movies_app_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08bd386534d9c3c18",
            "tags": {
              "Name": "movies-api-2",
              "Rule": "BackendAPI"
            },
            "tags_all": {
              "Name": "movies-api-2",
              "Rule": "BackendAPI"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04594d65ab665cc03"
            ]
          },
          "dependencies": [
            "aws_eip.mongodb_eip",
            "aws_eip.rabbitmq_eip",
            "aws_instance.mongodb",
            "aws_instance.rabbitmq",
            "aws_security_group.movies_sg",
            "aws_ssm_parameter.mongo_ip",
            "aws_ssm_parameter.rabbitmq_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mongodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-09757e8c9b2ba5eef",
            "arn": "arn:aws:ec2:us-east-1:306970076789:instance/i-09cb2362273c42145",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09cb2362273c42145",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f56c7f00d74f7162"
              }
            ],
            "primary_network_interface_id": "eni-0f56c7f00d74f7162",
            "private_dns": "ip-172-31-93-176.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.93.176",
            "public_dns": "ec2-13-218-72-67.compute-1.amazonaws.com",
            "public_ip": "13.218.72.67",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ef8d9b9a805714c6",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "movies_app_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08bd386534d9c3c18",
            "tags": {
              "Name": "mongodb-Server",
              "Rule": "NoSQLDatabase"
            },
            "tags_all": {
              "Name": "mongodb-Server",
              "Rule": "NoSQLDatabase"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04594d65ab665cc03"
            ]
          },
          "dependencies": [
            "aws_security_group.movies_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "rabbitmq",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-09757e8c9b2ba5eef",
            "arn": "arn:aws:ec2:us-east-1:306970076789:instance/i-00488a6ce297fcc08",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00488a6ce297fcc08",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0198a8816133e36f3"
              }
            ],
            "primary_network_interface_id": "eni-0198a8816133e36f3",
            "private_dns": "ip-172-31-81-235.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.81.235",
            "public_dns": "ec2-13-222-54-150.compute-1.amazonaws.com",
            "public_ip": "13.222.54.150",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04f5c88be9f9702b1",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "movies_app_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08bd386534d9c3c18",
            "tags": {
              "Name": "rabbitmq-Server",
              "Rule": "MessageBroker"
            },
            "tags_all": {
              "Name": "rabbitmq-Server",
              "Rule": "MessageBroker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04594d65ab665cc03"
            ]
          },
          "dependencies": [
            "aws_security_group.movies_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-09757e8c9b2ba5eef",
            "arn": "arn:aws:ec2:us-east-1:306970076789:instance/i-0e795cf58393d0cf4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-0e795cf58393d0cf4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-09a35df954ec44f24"
              }
            ],
            "primary_network_interface_id": "eni-09a35df954ec44f24",
            "private_dns": "ip-172-31-94-170.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.94.170",
            "public_dns": "ec2-3-95-17-207.compute-1.amazonaws.com",
            "public_ip": "3.95.17.207",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-061ba79622bc65801",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "movies_app_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08bd386534d9c3c18",
            "tags": {
              "Name": "worker-Server",
              "Rule": "AsyncWorker"
            },
            "tags_all": {
              "Name": "worker-Server",
              "Rule": "AsyncWorker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04594d65ab665cc03"
            ]
          },
          "dependencies": [
            "aws_eip.mongodb_eip",
            "aws_eip.rabbitmq_eip",
            "aws_instance.mongodb",
            "aws_instance.rabbitmq",
            "aws_security_group.movies_sg",
            "aws_ssm_parameter.mongo_ip",
            "aws_ssm_parameter.rabbitmq_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "api_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:306970076789:loadbalancer/app/movies-lb-api/f28882e093a347c0",
            "arn_suffix": "app/movies-lb-api/f28882e093a347c0",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "movies-lb-api-1481747799.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:306970076789:loadbalancer/app/movies-lb-api/f28882e093a347c0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "movies-lb-api",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-04594d65ab665cc03"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0624b845d734804e8"
              },
              {
                "subnet_id": "subnet-08bd386534d9c3c18"
              }
            ],
            "subnets": [
              "subnet-0624b845d734804e8",
              "subnet-08bd386534d9c3c18"
            ],
            "tags": {
              "Name": "movies-lb-api"
            },
            "tags_all": {
              "Name": "movies-lb-api"
            },
            "vpc_id": "vpc-058e3f62319df1f32",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.movies_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:306970076789:listener/app/movies-lb-api/f28882e093a347c0/3b27d45166397877",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:306970076789:targetgroup/movies-api-tg/b16246962a0e454f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:306970076789:listener/app/movies-lb-api/f28882e093a347c0/3b27d45166397877",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:306970076789:loadbalancer/app/movies-lb-api/f28882e093a347c0",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.api_lb",
            "aws_lb_target_group.api_tg",
            "aws_security_group.movies_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:306970076789:targetgroup/movies-api-tg/b16246962a0e454f",
            "arn_suffix": "targetgroup/movies-api-tg/b16246962a0e454f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/movies",
                "port": "5000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:306970076789:targetgroup/movies-api-tg/b16246962a0e454f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "movies-api-tg",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-058e3f62319df1f32"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "api1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:306970076789:targetgroup/movies-api-tg/b16246962a0e454f,i-02ce19a3054784373,5000",
            "port": 5000,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:306970076789:targetgroup/movies-api-tg/b16246962a0e454f",
            "target_id": "i-02ce19a3054784373"
          },
          "dependencies": [
            "aws_eip.mongodb_eip",
            "aws_eip.rabbitmq_eip",
            "aws_instance.api1",
            "aws_instance.mongodb",
            "aws_instance.rabbitmq",
            "aws_lb_target_group.api_tg",
            "aws_security_group.movies_sg",
            "aws_ssm_parameter.mongo_ip",
            "aws_ssm_parameter.rabbitmq_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "api2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:306970076789:targetgroup/movies-api-tg/b16246962a0e454f,i-0b987b24b731dca06,5000",
            "port": 5000,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:306970076789:targetgroup/movies-api-tg/b16246962a0e454f",
            "target_id": "i-0b987b24b731dca06"
          },
          "dependencies": [
            "aws_eip.mongodb_eip",
            "aws_eip.rabbitmq_eip",
            "aws_instance.api2",
            "aws_instance.mongodb",
            "aws_instance.rabbitmq",
            "aws_lb_target_group.api_tg",
            "aws_security_group.movies_sg",
            "aws_ssm_parameter.mongo_ip",
            "aws_ssm_parameter.rabbitmq_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "movies_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:306970076789:security-group/sg-04594d65ab665cc03",
            "description": "security groups movies",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04594d65ab665cc03",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 15672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 15672
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5672
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "movies_app_sg",
            "name_prefix": "",
            "owner_id": "306970076789",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "movies_app_sg"
            },
            "tags_all": {
              "Name": "movies_app_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-058e3f62319df1f32"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}